// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditor.protobuf;

message Pus142ParameterMonitoringDefinition {
extensions 9 to 109;

  optional ccsds_mal.protobuf.UINTEGER paramMonId = 1;
  optional ccsds_mal.protobuf.ULONG uniqueId = 2;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 3;
  optional ccsds_mal.protobuf.STRING serviceApidName = 4;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeId = 5;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeId = 6;
  optional ccsds_mal.protobuf.STRING paramMonName = 7;
  optional ccsds_mal.protobuf.UINTEGER fmonId = 8;
}
